<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6F6F6"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tvUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="USDT"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvUnit"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/order_done"
            android:textColor="@color/colorTextNormal"
            android:textSize="15sp"
            android:visibility="visible" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F5F7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:text="@string/tradTime"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/type"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/amount"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/poundage"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:layout_height="40dp"
        >

        <TextView
            android:id="@+id/tvTime"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="2017-12-12 13:30"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvType"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="币币交易"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="20"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCharge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0.0001"
            android:textColor="#000"
            android:textSize="14sp" />


    </LinearLayout>

    <TextView
        android:background="#F0F5F7"
        android:layout_width="match_parent"
        android:layout_height="3dp" />

</LinearLayout>