<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryBackLight"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/dialog_one_title"
            android:textColor="@color/primaryText"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ddd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <LinearLayout
                        android:id="@+id/ll1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:minWidth="60dp"
                            android:text="@string/dialog_msg_one"
                            android:textColor="@color/primaryText"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:text="123USDT"
                            android:textColor="@color/typeRed"
                            android:textSize="13sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll1"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:minWidth="60dp"
                            android:textColor="@color/primaryText"
                            android:text="@string/dialog_msg_two"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/tvTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:text="13USDT"
                            android:textColor="@color/typeRed"
                            android:textSize="13sp"/>
                    </LinearLayout>

                </RelativeLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <LinearLayout
                        android:id="@+id/ll2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:minWidth="60dp"
                            android:textColor="@color/primaryText"
                            android:text="@string/dialog_msg_three"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/tvAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:text="123BTC"
                            android:textColor="@color/typeRed"
                            android:textSize="13sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll2"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:minWidth="60dp"
                            android:textColor="@color/primaryText"
                            android:text="@string/dialog_msg_four"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/tvType"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:text="买入"
                            android:textColor="@color/typeRed"
                            android:textSize="13sp"/>
                    </LinearLayout>

                </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ddd"/>

        <TextView
            android:textColor="@color/primaryTextGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/dialog_one_one"/>

        <TextView
            android:id="@+id/tvCancleOrder"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circle_corner_rect_gray_back1"
            android:gravity="center"
            android:text="@string/dialog_one_two"
            android:textColor="#fff"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvCancleAndBuy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/circle_corner_rect_gray_back1"
            android:gravity="center"
            android:text="撤单后买入"
            android:textColor="#fff"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvCancle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/circle_corner_rect_gray_back1"
            android:gravity="center"
            android:text="@string/dialog_one_cancel"
            android:textColor="@color/primaryText"
            android:textSize="16sp"/>


    </LinearLayout>


</LinearLayout>